# sentineldb

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  instances.yaml  manual_test.py  manual_test2.py  patch_frontend.py  patch_handlers.py  patch_registry.py  patch_tasks.py  patch_tenant.py  pyproject.toml  test_async_jwks.py
.claude/: settings.json
.claude/rules/: agent-workflow.md  project-scope.md  safety-guardrails.md  testing.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  b43483a47468_add_threshold_configs_table.py  d1b7b3cd934c_add_tenant_id_multi_tenancy.py
docs/: ARCHITECTURE.md  DECISIONS.md  MANUAL_TESTING_GUIDE.md  PRD.md
docs/brainstorms/: 2026-06-27-sentineldb-tech-stack-system-design-requirements.md  2026-07-02-frontend-dashboard-v3-saas-requirements.md  2026-07-02-real-time-telemetry-collectors-requirements.md
docs/growth/: ab-test-db-connection.md
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/src/: App.tsx  middleware.ts
runbooks/: db_unreachable.md  high_cpu_connection_saturation.md  replication_lag.md  slow_query_spike.md
tests/: conftest.py  test_analyzer.py  test_api.py  test_api_config.py  test_api_incidents.py  test_api_tenant.py  test_catalog.py  test_collector_cloudwatch.py  test_collector_mysql.py  test_collector_postgres.py  test_collector_prometheus.py  test_e2e_simulated.py  test_guardrails.py  test_models.py  test_notifications.py  test_registry.py  test_renderer.py  test_runbook_retriever.py  test_summarizer.py
(+71 files in other folders)
